fix(style): Dim border color in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -147,6 +147,10 @@ footer a {
   footer {
     color: #aaa;
   }
+
+  .members th, .members td {
+    border-bottom-color: #333;
+  }
 }
 
 @media (max-width: 640px) {
